--- a/parameters/Cargo.toml
+++ b/parameters/Cargo.toml
@@ -82,6 +82,9 @@ version = "1"
 [dependencies.rand]
 version = "0.8"
 
+[dependencies.reqwest]
+version = "0.11.18"
+
 [dependencies.serde_json]
 version = "1"
 features = [ "preserve_order" ]
