--- a/algorithms/Cargo.toml
+++ b/algorithms/Cargo.toml
@@ -171,6 +171,9 @@ features = [ "preserve_order" ]
 [dev-dependencies.serial_test]
 version = "2.0"
 
+[dev-dependencies.wasm-bindgen-test]
+version = "0.3.37"
+
 [features]
 default = [
   "full",
