--- a/synthesizer/program/Cargo.toml
+++ b/synthesizer/program/Cargo.toml
@@ -28,6 +28,9 @@ default = [ ]
 serial = [ "console/serial" ]
 wasm = [ "console/wasm" ]
 
+[dependencies.async-trait]
+version = "0.1"
+
 [dependencies.circuit]
 package = "snarkvm-circuit"
 path = "../../circuit"
