--- a/parameters/Cargo.toml
+++ b/parameters/Cargo.toml
@@ -98,7 +98,7 @@ version = "1.0"
 
 [dependencies.web-sys]
 version = "0.3.64"
-features = [ "XmlHttpRequest" ]
+features = [ "console", "XmlHttpRequest" ]
 optional = true
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies.curl]
